# sche-bot

./: Cargo.toml  flake.nix
migrations/: 20260408104752_init.sql
src/: main.rs
src/commands/: task.rs
src/database/: db_ops.rs
src/models/: mod.rs  schedule.rs  task.rs
