[package]
name = "sche-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dotenvy = "0.15.7"
poise = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serenity = "0.12.5"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros"] }
tokio = { version = "1.51.1", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
